--- a/project-course-readpe/Makefile
+++ b/project-course-readpe/Makefile
@@ -1,7 +1,6 @@
 all:
-	gcc -o readpe.o readpe.c -c
+	gcc -o readpe.o readpe.c
 	gcc -o readpe readpe.o lib/libpetest.a
 	rm -f readpe.o
-
 clean:
 	rm -f readpe
